adding the picking-up program
using diff horizon distribution

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 1, 2, 7], 1)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "horizon_p=[random.randint(0,10),random.randint(0,10),random.randint(0,10),random.randint(0,10)]\n",
+    "horizon = random.choices([-1,-0.4,0.4,1], weights=horizon_p, k=1)[0]\n",
+    "horizon_p,horizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "钢铁侠\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    " \n",
+    "# input: probability distribution and correspondence\n",
+    "list_probability = [0.005, 0.015, 0.08, 0.25, 0.3, 0.25, 0.08, 0.015, 0.005]\n",
+    "list_player_role = ['黑寡妇', '蜘蛛侠', '绿巨人', '雷神', '钢铁侠', '奇异博士', '美国队长', '黑豹', '鹰眼']\n",
+    "# sampling\n",
+    "result = random.choices(list_player_role, weights=list_probability, k=1)[0]\n",
+    "# output: sampling one by probability distribution\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
